Hack to prevent an overflow

--- a/sass/components/_asciidoc.scss
+++ b/sass/components/_asciidoc.scss
@@ -248,7 +248,6 @@ b.button:after {
 #content,
 #footnotes,
 #footer {
-  width: 100%;
   margin: 2em auto 0;
   max-width: 62.5em;
   position: relative;
@@ -400,7 +399,7 @@ b.button:after {
   }
 
   body.toc2 {
-    padding-left: 15em;
+    padding-left: 17em;
     padding-right: 0;
   }
 
@@ -442,7 +441,7 @@ b.button:after {
 
   body.toc2.toc-right {
     padding-left: 0;
-    padding-right: 15em;
+    padding-right: 17em;
 
     #toc.toc2 {
       border-right-width: 0;
@@ -455,7 +454,7 @@ b.button:after {
 
 @media #{$medium} {
   body.toc2 {
-    padding-left: 20em;
+    padding-left: 22em;
     padding-right: 0;
   }
 
@@ -477,7 +476,7 @@ b.button:after {
 
   body.toc2.toc-right {
     padding-left: 0;
-    padding-right: 20em;
+    padding-right: 22em;
   }
 }
 
